Added a database with mock data. Added a button.

--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
         <p>second ingredient:</p>
         <input type="text" name="ingredient2" />
     </form>
+    <button>calculate pairings</button>
   </body>
 </html>
